tests/snapshots/special_chars__tab.snap
---
source: tests/special_chars.rs
expression: "edn_parse(\"\\\\tab\").unwrap().cst"
---
edn [0..4]
    literal [0..4]
        char [0..4]
            CharEscape "\\" [0..1]
            Chars "tab" [1..4]
